# CudaRayTracing

./: .gitignore  CMakeLists.txt  Guideline.md  README.md  config.json  config.json.backup
ext/glad/include/glad/: glad.h
ext/glad/src/: glad.c
include/: BVH.h  Camera.h  Command.cuh  DeviceBVH.cuh  DeviceLights.cuh  DeviceMaterial.cuh  DeviceStack.cuh  DeviceTriangle.cuh  GLUtils.h  Global.h  Gui.h  Loader.h  Material.h  OBJLoader.h  Object.h  Payload.cuh  Ray.cuh  Render.cuh  RenderThread.cuh  Resource.cuh  Scene.h  Triangle.h  stb_image_write.h
include/Eigen/src/Geometry/: EulerAngles.h
models/CornellBox/: config.json  floor.mtl  left.mtl  light.mtl  right.mtl  shortbox.mtl  tallbox.mtl
models/CornellBox/render/: scene01.avi
models/Scene-01/: scene.mtl
models/Scene-02/: scene.mtl
models/Scene-03/: scene.mtl
models/Scene-04/data/: transform.json
models/Scene-05/: scene.mtl
models/Scene-05/data/: transform.json
models/Scene-06/: scene.mtl
models/Scene-07/: scene-10k.mtl
models/WallPaper/: wallpaper.mtl
scenes/cornell-box/: cornell-box.mtl  cornell-box.xml
scenes/veach-mis/: config.json  veach-mis.mb  veach-mis.mtl  veach-mis.xml
src/: Command.cu  GLUtils.cpp  Render.cu  RenderThread.cu  Resource.cu  main.cu
